--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   hooks_riverpod: ^2.0.0-dev.4
   freezed_annotation: ^1.1.0
   file_selector: ^0.8.4+1
+  shared_preferences: ^2.0.13
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
