--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   freezed_annotation: ^1.1.0
   file_selector: ^0.8.4+1
   shared_preferences: ^2.0.13
-  native_context_menu: ^0.2.1+4
+  desktop_context_menu: ^0.1.1
 
   window_size:
     git:
